# GNN-C2L

./: .gitignore  LICENSE  README.md  setup.cfg
experiments/comparative_eval/: all_run.sh  args_run_c2l.py  args_run_c2l_mpoa.py  args_run_c2l_xenium.py  celltype_signatures.py  data.py  metric_utils.py  metrics.py  metrics_mpoa.py  model_resolver.py  results_analysis.ipynb  results_analysis_mpoa_and_xenium.ipynb
gnnc2l/: __init__.py  run_colocation.py
gnnc2l/distributions/: AutoAmortisedNormalMessenger.py
gnnc2l/models/: __init__.py  _cell2location_GNNDirect_module.py  _cell2location_model.py  _cell2location_module.py  gnns.py  gnns2.py  gnns3.py  gnns4.py  gnns5.py  gnns6.py
gnnc2l/models/base/: _pyro_base_reference_module.py  base_model.py
gnnc2l/plt/: plot_heatmap.py  plot_in_1D.py
