[metadata]
name = gnnc2l
version = 0.2
description = GNN-C2L package for spatial cell type deconvolution
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
url = https://github.com/paulmorio/gnnc2l
author = Paul Scherer, Ramon Vinas Torne
author_email = pms69@cam.ac.uk

[options]
include_package_data = True
packages = find:
install_requires =
    pyro-ppl>=1.8.0
    scvi-tools>=0.15.3
    torch>=1.9.0
    protobuf==3.20.1
    numpy
    pandas
    scanpy
    opencv-python